[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/player/Anchor.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/player/Walker.gd" type="Script" id=2]
[ext_resource path="res://objects/player/cheer.png" type="Texture" id=4]
[ext_resource path="res://objects/player/bounce.wav" type="AudioStream" id=5]
[ext_resource path="res://objects/player/goal.wav" type="AudioStream" id=6]
[ext_resource path="res://objects/player/transfersheet.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 532, 266, 266 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 266, 266 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 266, 0, 266, 266 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 266, 266, 266 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 266, 266, 266, 266 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 532, 0, 266, 266 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 532, 266, 266, 266 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 12 ) ],
"loop": false,
"name": "transfer",
"speed": 10.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "cheer"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterPosition/Cheer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterPosition/Cheer:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 4.59479 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"

[node name="Walker" type="Node2D" groups=[
"walker",
]]
script = ExtResource( 2 )

[node name="Anchor_Right" parent="." instance=ExtResource( 1 )]
position = Vector2( 91.2756, 0 )
dull_color = Color( 0.95, 0.95, 0.95, 1 )

[node name="Anchor_Left" parent="." instance=ExtResource( 1 )]

[node name="CenterPosition" type="Sprite" parent="."]

[node name="Cheer" type="Sprite" parent="CenterPosition"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )

[node name="LinkSprite" type="AnimatedSprite" parent="CenterPosition"]
position = Vector2( 0.314926, -8.32802 )
scale = Vector2( 0.31421, 0.31421 )
z_index = -1
frames = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cheer = SubResource( 1 )
anims/default = SubResource( 2 )

[node name="BouncePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GoalPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0

[connection signal="bumped" from="Anchor_Right" to="." method="_on_Anchor_Right_bumped"]
[connection signal="bumped" from="Anchor_Left" to="." method="_on_Anchor_Left_bumped"]
